having a blast with bibliography
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@428 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -292,7 +292,7 @@
 @article{Papucci:2014iwa,
       author         = "Papucci, Michele and Vichi, Alessandro and Zurek, Kathryn
                         M.",
-      title          = "Monojet versus the rest of the world {I}: t-channel
+      title          = "Monojet versus the rest of the world {I}: {$t$}-channel
                         models",
       journal        = "JHEP",
       volume         = "1411",
@@ -320,7 +320,7 @@
 }
 @article{Yavin:14092893,
       AUTHOR       = "Jalal Abdallah and others",
-      TITLE        = "Simplified Models for Dark Matter and Missing Energy Searches at the {LHC}",
+      title        = "Simplified Models for Dark Matter and Missing Energy Searches at the {LHC}",
       year           = "2014",
       eprint         = "1409.2893",
       archivePrefix  = "arXiv",
@@ -411,7 +411,7 @@
                         and Morgante, Enrico and Riotto, Antonio",
       title          = "On the Validity of the Effective Field Theory for Dark
                         Matter Searches at the {LHC} Part {III}: Analysis for the
-                        $t$-channel",
+                        {$t$}-channel",
       journal        = "JCAP",
       volume         = "1409",
       pages          = "022",
@@ -427,7 +427,7 @@
                         Johanna and Morgante, Enrico and Riotto, Antonio",
       title          = "On the Validity of the Effective Field Theory for Dark
                         Matter Searches at the {LHC}, Part {II}: Complete Analysis for
-                        the $s$-channel",
+                        the {$s$}-channel",
       journal        = "JCAP",
       volume         = "1406",
       pages          = "060",
@@ -577,8 +577,8 @@
 @article{CDFmonotop,
       author         = "Aaltonen, T. and others",
       title          = "Search for a dark matter candidate produced in
-                        association with a single top quark in $p\bar{p}$
-                        collisions at $\sqrt{s} = 1.96$ {TeV}",
+                        association with a single top quark in {$p\bar{p}$}
+                        collisions at {$\sqrt{s} = 1.96$} {TeV}",
       collaboration  = "CDF Collaboration",
       journal        = "Phys.Rev.Lett.",
       volume         = "108",
@@ -597,7 +597,7 @@
 @article{Khachatryan:2014uma,
       author         = "{CMS Collaboration}",
       title          = "Search for Monotop Signatures in Proton-Proton
-                        Collisions at $\sqrt s =$ 8~{TeV}",
+                        Collisions at {$\sqrt s =$} 8~{TeV}",
       collaboration  = "{CMS}",
       journal        = "Phys.Rev.Lett.",
       number         = "10",
@@ -617,7 +617,7 @@
       author         = "{ATLAS Collaboration}",
       title          = "Search for invisible particles produced in association
                         with single-top-quarks in proton-proton collisions at
-                        $\sqrt{s}$ = 8~{TeV} with the {ATLAS} detector",
+                        {$\sqrt{s}$} = 8~{TeV} with the {ATLAS} detector",
       collaboration  = "{ATLAS}",
       journal        = "Eur.Phys.J.",
       number         = "2",
@@ -635,7 +635,7 @@
 
 @article{ATLASsamesigntop,
       authors  = "{ATLAS Collaboration}",
-      title          = "Analysis of events with $b$-jets and two leptons of the same charge or three leptons in $pp$ collisions at $\sqrt{s}=8$~{TeV} with the {ATLAS} detector",
+      title          = "Analysis of events with {$b$}-jets and two leptons of the same charge or three leptons in {$pp$} collisions at {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
       journal        = "submitted to Eur.Phys.J.C",
       volume         = "",
       pages          = "",
@@ -674,7 +674,7 @@
       author         = "Abdullah, Mohammad and DiFranzo, Anthony and Rajaraman,
                         Arvind and Tait, Tim M.P. and Tanedo, Philip and others",
       title          = "Hidden on-shell mediators for the {Galactic Center}
-                        $\gamma$-ray excess",
+                        {$\gamma$}-ray excess",
       journal        = "Phys.Rev.",
       number         = "3",
       volume         = "D90",
@@ -738,7 +738,7 @@
 
 @misc{ForumSVN_DMV,
         key = {Forum Model Repository DMV},
-	title = "{SVN} repository for {POWHEG} input card for model with s-channel exchange of vector mediator",
+	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of vector mediator",
 	howpublished = {\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}},
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -746,7 +746,7 @@
 
 @misc{ForumSVN_DMA,
         key = {Forum Model Repository DMA},
-	title = "{SVN} repository for {POWHEG} input card for model with s-channel exchange of axial vector mediator",
+	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of axial vector mediator",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -754,7 +754,7 @@
 
 @misc{ForumSVN_DMS,
         key = {Forum Model Repository DMS},
-	title = "{SVN} repository for {POWHEG} input card for model with s-channel exchange of scalar and pseudoscalar
+	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar and pseudoscalar
 	coupling to the quarks in a {Yukawa}-like way, at {NLO}",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
 	year = {2015}, 
@@ -763,7 +763,7 @@
 
 @misc{ForumSVN_DMP_tloop,
         key = {Forum Model Repository DMP_tloop},
-	title = "{SVN} repository for {POWHEG} input card for model with s-channel exchange of pseudo-scalar mediator,
+	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator,
 	coupling to the quarks through a top loop",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP_tloop/}",
 	year = {2015}, 
@@ -772,7 +772,7 @@
 
 @misc{ForumSVN_DMS_tloop,
         key = {Forum Model Repository DMS_tloop},
-	title = "{SVN} repository for {POWHEG} input card for model with s-channel exchange of scalar mediator",
+	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar mediator",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_tLoop/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -780,7 +780,7 @@
 
 @misc{ForumSVN_DMGG,
         key = {Forum Model Repository DMGG},
-	title = {{SVN} repository for {POWHEG} input card for model with s-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop},
+	title = {{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -788,7 +788,7 @@
 
 @misc{ForumSVN_EW_DMV,
         key = {Forum Model Repository EW_DMV},
-	title = "{SVN} repository for {Madgraph} input cards for model with s-channel exchange of vector mediator, for electroweak boson final states",
+	title = "{SVN} repository for {Madgraph} input cards for model with {$s$}-channel exchange of vector mediator, for electroweak boson final states",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_DMV/}",
 	year = {2015}, 
 	note = "[Online; accessed 15-May-2015]"
@@ -796,7 +796,7 @@
 
 @misc{ForumSVN_TChannel_PapucciVichiZurek,
         key = {Forum Model Repository TChannel-1},
-	title = "{SVN} repository for {Madgraph} inputs with t-channel exchange of colored scalar mediator, couplings to light quarks only",
+	title = "{SVN} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to light quarks only",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_PapucciVichiZurek/}",
 	year = {2015}, 
 	note = "[Online; accessed 27-April-2015]"
@@ -804,7 +804,7 @@
 
 @misc{ForumSVN_TChannel_Amelia,
         key = {Forum Model Repository TChannel-2},
-	title = "{SVN} repository for {Madgraph} inputs with t-channel exchange of colored scalar mediator, couplings to all quark generations",
+	title = "{SVN} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to all quark generations",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_Amelia_Brennan/}",
 	year = {2015}, 
 	note = "[Online; accessed 27-April-2015]"
@@ -813,7 +813,7 @@
 
 @misc{ForumSVN_DMTTBar,
         key = {Forum Model Repository DMTTBar},
-	title = "{SVN} repository for {Madgraph} inputs for model with s-channel exchange of pseudo-scalar mediator, produced in association with top quarks",
+	title = "{SVN} repository for {Madgraph} inputs for model with {$s$}-channel exchange of pseudo-scalar mediator, produced in association with top quarks",
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S+PS/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -1173,7 +1173,7 @@
 }
 @article{An:2013xka,
       author         = "An, Haipeng and Wang, Lian-Tao and Zhang, Hao",
-      title          = "Dark matter with $t$-channel mediator: a simple step
+      title          = "Dark matter with {$t$}-channel mediator: a simple step
                         beyond contact interaction",
       journal        = "Phys.Rev.",
       number         = "11",
@@ -1353,8 +1353,8 @@
 @article{Aaltonen:2012jb,
       author         = "Aaltonen, T. and others",
       title          = "A search for dark matter in events with one jet and
-                        missing transverse energy in $p\bar{p}$ collisions at
-                        $\sqrt{s} = 1.96$~{TeV}",
+                        missing transverse energy in {$p\bar{p}$} collisions at
+                        {$\sqrt{s} = 1.96$}~{TeV}",
       collaboration  = "{CDF Collaboration}",
       journal        = "Phys.Rev.Lett.",
       volume         = "108",
@@ -1784,8 +1784,8 @@
 @article{Chatrchyan:2014dha,
       author  = "{CMS Collaboration}",
       title          = "Measurement of the production cross sections for a {Z}
-                        boson and one or more $b$ jets in $pp$ collisions at $\sqrt{s} =
-                        7$~{TeV}",
+                        boson and one or more {$b$} jets in {$pp$} collisions at {$\sqrt{s} =
+                        7$}~{TeV}",
       journal        = "JHEP",
       volume         = "1406",
       pages          = "120",
@@ -1801,8 +1801,8 @@
 %\cite{CMS_Zb}
 @article{Chatrchyan:2012vr,
       author         = "{CMS Collaboration}",
-      title          = "Measurement of the {$Z$}/$\gamma$*+$b$-jet cross section in $pp$
-                        collisions at $\sqrt{s}$ = 7~{TeV}",
+      title          = "Measurement of the {$Z$}/{$\gamma$}*+{$b$}-jet cross section in {$pp$}
+                        collisions at {$\sqrt{s}$} = 7~{TeV}",
       journal        = "JHEP",
       volume         = "1206",
       pages          = "126",
@@ -1818,8 +1818,8 @@
 @article{Chatrchyan:2013zja,
       author         = "{CMS Collaboration}",
       title          = "Measurement of the cross section and angular
-                        correlations for associated production of a {$Z$} boson with $b$
-                        hadrons in $pp$ collisions at $\sqrt{s} =$ 7~{TeV}",
+                        correlations for associated production of a {$Z$} boson with {$b$}
+                        hadrons in {$pp$} collisions at {$\sqrt{s} =$} 7~{TeV}",
       journal        = "JHEP",
       volume         = "1312",
       pages          = "039",
@@ -1991,8 +1991,8 @@
 @article{Aad:2015zva,
       author         = "{ATLAS Collaboration}",
       title          = "Search for new phenomena in final states with an
-                        energetic jet and large missing transverse momentum in $pp$
-                        collisions at $\sqrt{s}=8$~{TeV} with the {ATLAS} detector",
+                        energetic jet and large missing transverse momentum in {$pp$}
+                        collisions at {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
       collaboration  = "{ATLAS}",
       year           = "2015",
       eprint         = "1502.01518",
@@ -2007,8 +2007,8 @@
 @article{Khachatryan:2014rra,
 	author         = "{CMS Collaboration}",
 	title          = "Search for dark matter, extra dimensions, and
-	unparticles in monojet events in proton$-$proton
-	collisions at $\sqrt{s} = 8$~{TeV}",
+	unparticles in monojet events in proton{$-$}proton
+	collisions at {$\sqrt{s} = 8$}~{TeV}",
 	journal        = "Eur.Phys.J.",
 	number         = "5",
 	volume         = "C75",
@@ -2026,8 +2026,8 @@
 @article{CMS-PAS-B2G-13-004,
     author         = "{CMS Collaboration}",
 	title         = "Search for the Production of Dark Matter in Association
-	with Top Quark Pairs in the Di-lepton Final State in $pp$
-	collisions at $\sqrt{s} = 8$~{TeV}",
+	with Top Quark Pairs in the Di-lepton Final State in {$pp$}
+	collisions at {$\sqrt{s} = 8$}~{TeV}",
 	institution   = "CERN",
 	collaboration = "{CMS}",
 	address       = "Geneva",
@@ -2040,7 +2040,7 @@
 
 @article{CMS-PAS-EXO-14-004,
     author         = "{CMS Collaboration}",
-	title         = "Search for dark matter direct production using razor variables in events with two or more jets in $pp$ collisions at 8~{TeV}",
+	title         = "Search for dark matter direct production using razor variables in events with two or more jets in {$pp$} collisions at 8~{TeV}",
 	institution   = "CERN",
 	collaboration = "{CMS}",
 	address       = "Geneva",
@@ -2058,7 +2058,7 @@
     author         = "{ATLAS Collaboration}",
 	title          = "Search for dark matter in events with a hadronically
 	decaying {W} or {Z} boson and missing transverse momentum in
-	$pp$ collisions at $\sqrt{s} =$ 8~{TeV} with the {ATLAS}
+	{$pp$} collisions at {$\sqrt{s} =$} 8~{TeV} with the {ATLAS}
 	detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Phys.Rev.Lett.",
@@ -2077,8 +2077,8 @@
 @article{Aad:2014vka,
     author         = "{ATLAS Collaboration}",
 	title          = "Search for dark matter in events with a {Z} boson and
-	missing transverse momentum in $pp$ collisions at
-	$\sqrt{s}$=8~{TeV} with the {ATLAS} detector",
+	missing transverse momentum in {$pp$} collisions at
+	{$\sqrt{s}$}=8~{TeV} with the {ATLAS} detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Phys.Rev.",
 	number         = "1",
@@ -2099,8 +2099,8 @@
     author         = "{ATLAS Collaboration}",
 	collaboration         = "{ATLAS}",
 	title          = "Search for new particles in events with one lepton and
-	missing transverse momentum in $pp$ collisions at
-	$\sqrt{s}$ = 8~{TeV} with the {ATLAS} detector",
+	missing transverse momentum in {$pp$} collisions at
+	{$\sqrt{s}$} = 8~{TeV} with the {ATLAS} detector",
 	journal        = "JHEP",
 	volume         = "1409",
 	pages          = "037",
@@ -2117,8 +2117,8 @@
 @article{Aad:2014tda,
       author         = "{ATLAS Collaboration}",
       title          = "Search for new phenomena in events with a photon and
-                        missing transverse momentum in $pp$ collisions at
-                        $\sqrt{s}=8$~{TeV} with the {ATLAS} detector",
+                        missing transverse momentum in {$pp$} collisions at
+                        {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
       collaboration  = "{ATLAS}",
       journal        = "Phys.Rev.",
       number         = "1",
@@ -2138,7 +2138,7 @@
 @article{Khachatryan:2014rwa,
     author         = "{CMS Collaboration}",
 	title          = "Search for new phenomena in monophoton final states in
-	proton-proton collisions at $\sqrt{s}$ = 8~{TeV}",
+	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
 	collaboration  = "{CMS}",
       year           = "2014",
       eprint         = "1410.8812",
@@ -2153,7 +2153,7 @@
       author         = "{CMS Collaboration}",
       title          = "Search for physics beyond the standard model in final
                         states with a lepton and missing transverse energy in
-                        proton-proton collisions at $\sqrt{s}$ = 8~{TeV}",
+                        proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
       collaboration  = "{CMS}",
       journal        = "Phys.Rev.",
       number         = "9",
@@ -2173,7 +2173,7 @@
     author         = "{CMS Collaboration}",
 	title          = "Search for the production of dark matter in association
 	with top-quark pairs in the single-lepton final state in
-	proton-proton collisions at $\sqrt{s}$ = 8~{TeV}",
+	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
 	collaboration  = "{CMS}",
       year           = "2015",
       eprint         = "1504.03198",
@@ -2189,7 +2189,7 @@
 @article{Aad:2014vea,
     author         = "{ATLAS Collaboration}",
 	title          = "Search for dark matter in events with heavy quarks and
-	missing transverse momentum in $pp$ collisions with the
+	missing transverse momentum in {$pp$} collisions with the
 	{ATLAS} detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Eur.Phys.J.",
@@ -2211,7 +2211,7 @@
 @article{Aad:2015eha,
 	author  = "{ATLAS Collaboration}",
 	title          = "Search for New Phenomena in Dijet Angular Distributions
-	in Proton-Proton Collisions at $\sqrt{s} = 8$~{TeV} Measured
+	in Proton-Proton Collisions at {$\sqrt{s} = 8$}~{TeV} Measured
 	with the {ATLAS} detector",
 	year           = "2015",
 	eprint         = "1504.00357",
@@ -2225,7 +2225,7 @@
 	author         = "{CMS Collaboration}",
 	title          = "Search for quark contact interactions and extra spatial
 	dimensions using dijet angular distributions in
-	proton-proton collisions at $\sqrt{s}$ = 8~{TeV}",
+	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
 	year           = "2014",
 	eprint         = "1411.2646",
 	archivePrefix  = "arXiv",
@@ -2900,7 +2900,7 @@
 @article{IDMpos,
 	author         = "Nezri, Emmanuel and Tytgat, Michel H.G. and Vertongen,
 	Gilles",
-	title          = "$e^+$ and anti-p from {Inert Doublet} model dark matter",
+	title          = "{$e^+$} and anti-p from {Inert Doublet} model dark matter",
 	journal        = "JCAP",
 	volume         = "0904",
 	pages          = "014",
@@ -2987,7 +2987,7 @@
 }
 @article{IDMhgaga1,
 	author         = "Arhrib, Abdesslam and Benbrik, Rachid and Gaur, Naveen",
-	title          = "$H\to \gamma \gamma$ in {Inert Higgs Doublet Model}",
+	title          = "{$H\to \gamma \gamma$} in {Inert Higgs Doublet Model}",
 	journal        = "Phys.~Rev.~D",
 	volume         = "85",
 	pages          = "095021",
