--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -117,12 +117,31 @@
 \reserveinserts{20}
 %,backref=true,maxcitenames=3,maxbibnames=3,
 \usepackage[hyperref=true,url=false,backend=bibtex,style=alphabetic,backref=false,firstinits=true,doi=false,eprint=true,date=year,language=USenglish]{biblatex}
+% from http://tex.stackexchange.com/questions/176965/biblatex-sentence-case-and-math-mode-not-working-together
+\DeclareFieldFormat{sentencecase}{\MakeSentenceCase{#1}}
+\renewbibmacro*{title}{%
+  \ifthenelse{\iffieldundef{title}\AND\iffieldundef{subtitle}}
+    {}
+    {\ifthenelse{\ifentrytype{article}\OR\ifentrytype{inbook}%
+      \OR\ifentrytype{incollection}\OR\ifentrytype{inproceedings}%
+      \OR\ifentrytype{inreference}}
+      {\printtext[title]{%
+        \printfield[sentencecase]{title}%
+        \setunit{\subtitlepunct}%
+        \printfield[sentencecase]{subtitle}}}%
+      {\printtext[title]{%
+        \printfield[titlecase]{title}%
+        \setunit{\subtitlepunct}%
+        \printfield[titlecase]{subtitle}}}%
+     \newunit}%
+  \printfield{titleaddon}}
 % many of the following biblatex commands follow from examples by Ian Brock (ian.brock@cern.ch)
 \DeclareFieldFormat[article]{journaltitle}{#1\isdot}
 \DeclareFieldFormat[article]{journalsubtitle}{#1\isdot}
 \DeclareFieldFormat[article]{volume}{\textbf{#1}\isdot}
 \DeclareFieldFormat[article,inbook,incollection,inproceedings,patent,thesis,unpublished]
   {title}{\emph{#1\isdot}}
+\errorcontextlines=100
 \renewcommand*{\newunitpunct}{\addcomma\space}
 \renewbibmacro{in:}{}
 \renewcommand{\bibpagespunct}{\space}
@@ -135,21 +154,21 @@
   pages = {}
 }
 % biblatex title case as at http://tex.stackexchange.com/questions/22980/sentence-case-for-titles-in-biblatex
-\newrobustcmd{\MakeTitleCase}[1]{%
-  \ifthenelse{\ifcurrentfield{booktitle}\OR\ifcurrentfield{booksubtitle}%
-    \OR\ifcurrentfield{maintitle}\OR\ifcurrentfield{mainsubtitle}%
-    \OR\ifcurrentfield{journaltitle}\OR\ifcurrentfield{journalsubtitle}%
-    \OR\ifcurrentfield{issuetitle}\OR\ifcurrentfield{issuesubtitle}%
-    \OR\ifentrytype{book}\OR\ifentrytype{mvbook}\OR\ifentrytype{bookinbook}%
-    \OR\ifentrytype{booklet}\OR\ifentrytype{suppbook}%
-    \OR\ifentrytype{collection}\OR\ifentrytype{mvcollection}%
-    \OR\ifentrytype{suppcollection}\OR\ifentrytype{manual}%
-    \OR\ifentrytype{periodical}\OR\ifentrytype{suppperiodical}%
-    \OR\ifentrytype{proceedings}\OR\ifentrytype{mvproceedings}%
-    \OR\ifentrytype{reference}\OR\ifentrytype{mvreference}%
-    \OR\ifentrytype{report}\OR\ifentrytype{thesis}}
-    {#1}
-    {\MakeSentenceCase{#1}}}
+% \newrobustcmd{\MakeTitleCase}[1]{%
+%   \ifthenelse{\ifcurrentfield{booktitle}\OR\ifcurrentfield{booksubtitle}%
+%     \OR\ifcurrentfield{maintitle}\OR\ifcurrentfield{mainsubtitle}%
+%     \OR\ifcurrentfield{journaltitle}\OR\ifcurrentfield{journalsubtitle}%
+%     \OR\ifcurrentfield{issuetitle}\OR\ifcurrentfield{issuesubtitle}%
+%     \OR\ifentrytype{book}\OR\ifentrytype{mvbook}\OR\ifentrytype{bookinbook}%
+%     \OR\ifentrytype{booklet}\OR\ifentrytype{suppbook}%
+%     \OR\ifentrytype{collection}\OR\ifentrytype{mvcollection}%
+%     \OR\ifentrytype{suppcollection}\OR\ifentrytype{manual}%
+%     \OR\ifentrytype{periodical}\OR\ifentrytype{suppperiodical}%
+%     \OR\ifentrytype{proceedings}\OR\ifentrytype{mvproceedings}%
+%     \OR\ifentrytype{reference}\OR\ifentrytype{mvreference}%
+%     \OR\ifentrytype{report}\OR\ifentrytype{thesis}}
+%     {#1}
+%     {\MakeSentenceCase{Case #1}}}
 \addbibresource{doc.bib}
 
 \begin{document}
