--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -11,7 +11,6 @@
       title         = {Searches for dijet resonances at hadron colliders},
       journal       = {Int. J. Modern Phys.},
       volume        = {26},
-      number        = {30n31},
       pages         = {5005-5055},
       year          = {2011},
       eprint        = "1110.5302",
@@ -144,7 +143,6 @@
       title          = "Collider searches for dark matter in events with a {Z}
                         boson and missing energy",
       journal        = "Phys.Rev.",
-      number         = "7",
       volume         = "D87",
       pages          = "074005",
       doi            = "10.1103/PhysRevD.87.074005",
@@ -160,7 +158,6 @@
       title          = "Mono-everything: combined limits on dark matter
                         production at colliders from multiple final states",
       journal        = "Phys.Rev.",
-      number         = "9",
       volume         = "D87",
       pages          = "095013",
       doi            = "10.1103/PhysRevD.87.095013",
@@ -193,7 +190,6 @@
       title          = "Confronting the {Fermi Line} with {LHC} data: an Effective
                         Theory of Dark Matter Interaction with Photons",
       journal        = "Phys.Rev.",
-      number         = "5",
       volume         = "D89",
       pages          = "056011",
       doi            = "10.1103/PhysRevD.89.056011",
@@ -209,7 +205,6 @@
                         Michael and Shimmin, Chase and Tulin, Sean and others",
       title          = "Mono-{Higgs}-boson: A new collider probe of dark matter",
       journal        = "Phys.Rev.",
-      number         = "7",
       volume         = "D89",
       pages          = "075017",
       doi            = "10.1103/PhysRevD.89.075017",
@@ -346,7 +341,6 @@
       title          = "Constraining Dark Sectors at Colliders: Beyond the
                         Effective Theory Approach",
       journal        = "Phys.Rev.",
-      number         = "5",
       volume         = "D91",
       pages          = "055009",
       doi            = "10.1103/PhysRevD.91.055009",
@@ -362,7 +356,6 @@
       title          = "Next-to-Leading Order Predictions for Dark Matter
                         Production at Hadron Colliders",
       journal        = "Phys.Rev.",
-      number         = "5",
       volume         = "D87",
       pages          = "054030",
       doi            = "10.1103/PhysRevD.87.054030",
@@ -395,7 +388,6 @@
                         Jeffrey and Luty, Markus",
       title          = "Effective {WIMPs}",
       journal        = "Phys.Rev.",
-      number         = "1",
       volume         = "D89",
       pages          = "015011",
       doi            = "10.1103/PhysRevD.89.015011",
@@ -476,7 +468,6 @@
                         Dorival",
       title          = "Scalar Simplified Models for Dark Matter",
       journal        = "Phys.Rev.",
-      number         = "1",
       volume         = "D91",
       pages          = "015017",
       doi            = "10.1103/PhysRevD.91.015017",
@@ -511,7 +502,6 @@
       title          = "Flavored Dark Matter and the {Galactic Center} Gamma-Ray
                         Excess",
       journal        = "Phys.Rev.",
-      number         = "6",
       volume         = "D90",
       pages          = "063512",
       doi            = "10.1103/PhysRevD.90.063512",
@@ -562,7 +552,6 @@
                         Michael and Conte, Eric and Fuks, Benjamin",
       title          = "Monotop phenomenology at the {Large Hadron Collider}",
       journal        = "Phys.Rev.",
-      number         = "1",
       volume         = "D89",
       pages          = "014028",
       doi            = "10.1103/PhysRevD.89.014028",
@@ -600,7 +589,6 @@
                         Collisions at {$\sqrt s =$} 8~{TeV}",
       collaboration  = "{CMS}",
       journal        = "Phys.Rev.Lett.",
-      number         = "10",
       volume         = "114",
       pages          = "101801",
       doi            = "10.1103/PhysRevLett.114.101801",
@@ -620,7 +608,6 @@
                         {$\sqrt{s}$} = 8~{TeV} with the {ATLAS} detector",
       collaboration  = "{ATLAS}",
       journal        = "Eur.Phys.J.",
-      number         = "2",
       volume         = "C75",
       pages          = "79",
       doi            = "10.1140/epjc/s10052-014-3233-4",
@@ -658,7 +645,6 @@
       title          = "Particle Physics Implications and Constraints on Dark
                         Matter Interpretations of the {CDMS} Signal",
       journal        = "Phys.Rev.",
-      number         = "1",
       volume         = "D90",
       pages          = "013020",
       doi            = "10.1103/PhysRevD.90.013020",
@@ -676,7 +662,6 @@
       title          = "Hidden on-shell mediators for the {Galactic Center}
                         {$\gamma$}-ray excess",
       journal        = "Phys.Rev.",
-      number         = "3",
       volume         = "D90",
       pages          = "035004",
       doi            = "10.1103/PhysRevD.90.035004",
@@ -692,7 +677,6 @@
       title          = "Comparative study of various algorithms for the merging of 
 		  parton showers and matrix elements in hadronic collisions",
       journal        = "Eur.Phys.J.",
-      number         = "2",
       volume         = "C53",
       pages          = "473-500",
       doi            = "10.1140/epjc/s10052-007-0490-5",
@@ -921,7 +905,6 @@
 	title          = "Toward a public analysis database for {LHC} new physics
 	searches using {MADANALYSIS}~5",
 	journal        = "Eur.Phys.J.",
-	number         = "2",
 	volume         = "C75",
 	pages          = "56",
 	doi            = "10.1140/epjc/s10052-014-3242-3",
@@ -938,7 +921,6 @@
 	Wymant, Chris",
 	title          = "Designing and recasting {LHC} analyses with {MadAnalysis}~5",
 	journal        = "Eur.Phys.J.",
-	number         = "10",
 	volume         = "C74",
 	pages          = "3103",
 	doi            = "10.1140/epjc/s10052-014-3103-0",
@@ -972,7 +954,6 @@
 	and Zeune, Lisa",
 	title          = "{Fastlim}: a fast {LHC} limit calculator",
 	journal        = "Eur.Phys.J.",
-	number         = "11",
 	volume         = "C74",
 	pages          = "3163",
 	doi            = "10.1140/epjc/s10052-014-3163-1",
@@ -1005,7 +986,6 @@
       title          = "{UV} completions of magnetic inelastic and {Rayleigh} dark
                         matter for the {Fermi Line}(s)",
       journal        = "Phys.Rev.",
-      number         = "2",
       volume         = "D87",
       pages          = "023523",
       doi            = "10.1103/PhysRevD.87.023523",
@@ -1176,7 +1156,6 @@
       title          = "Dark matter with {$t$}-channel mediator: a simple step
                         beyond contact interaction",
       journal        = "Phys.Rev.",
-      number         = "11",
       volume         = "D89",
       pages          = "115014",
       doi            = "10.1103/PhysRevD.89.115014",
@@ -1206,7 +1185,6 @@
       title          = "Probing dark matter couplings to top and bottom quarks
                         at the {LHC}",
       journal        = "Phys.Rev.",
-      number         = "6",
       volume         = "D88",
       pages          = "063510",
       doi            = "10.1103/PhysRevD.88.063510",
@@ -1431,7 +1409,6 @@
 	title          = "{HistFitter} software framework for statistical data
 	analysis",
 	journal        = "Eur.Phys.J.",
-	number         = "4",
 	volume         = "C75",
 	pages          = "153",
 	doi            = "10.1140/epjc/s10052-015-3327-7",
@@ -1448,7 +1425,6 @@
 	title          = "Direct Detection of {Higgs-Portal} Dark Matter at the
 	{LHC}",
 	journal        = "Eur.Phys.J.",
-	number         = "6",
 	volume         = "C73",
 	pages          = "2455",
 	doi            = "10.1140/epjc/s10052-013-2455-1",
@@ -1536,7 +1512,6 @@
       title          = "Determining the structure of dark-matter couplings at
                         the {LHC}",
       journal        = "Phys.Rev.",
-      number         = "3",
       volume         = "D89",
       pages          = "034009",
       doi            = "10.1103/PhysRevD.89.034009",
@@ -1629,8 +1604,8 @@
 	Vyacheslav S.",
 	title          = "Improved naturalness with a heavy {Higgs}: An Alternative
 	road to {LHC} physics",
-	journal        = "Phys.~Rev.~D",
-	volume         = "74",
+	journal        = "Phys.~Rev.",
+	volume         = "D74",
 	pages          = "015007",
 	doi            = "10.1103/PhysRevD.74.015007",
 	year           = "2006",
@@ -2010,7 +1985,6 @@
 	unparticles in monojet events in proton{$-$}proton
 	collisions at {$\sqrt{s} = 8$}~{TeV}",
 	journal        = "Eur.Phys.J.",
-	number         = "5",
 	volume         = "C75",
 	pages          = "235",
 	doi            = "10.1140/epjc/s10052-015-3451-4",
@@ -2062,7 +2036,6 @@
 	detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Phys.Rev.Lett.",
-	number         = "4",
 	volume         = "112",
 	pages          = "041802",
 	doi            = "10.1103/PhysRevLett.112.041802",
@@ -2081,7 +2054,6 @@
 	{$\sqrt{s}$}=8~{TeV} with the {ATLAS} detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Phys.Rev.",
-	number         = "1",
 	volume         = "D90",
 	pages          = "012004",
 	doi            = "10.1103/PhysRevD.90.012004",
@@ -2121,7 +2093,6 @@
                         {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
       collaboration  = "{ATLAS}",
       journal        = "Phys.Rev.",
-      number         = "1",
       volume         = "D91",
       pages          = "012008",
       doi            = "10.1103/PhysRevD.91.012008",
@@ -2156,7 +2127,6 @@
                         proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
       collaboration  = "{CMS}",
       journal        = "Phys.Rev.",
-      number         = "9",
       volume         = "D91",
       pages          = "092005",
       doi            = "10.1103/PhysRevD.91.092005",
@@ -2193,7 +2163,6 @@
 	{ATLAS} detector",
 	collaboration  = "{ATLAS}",
 	journal        = "Eur.Phys.J.",
-	number         = "2",
 	volume         = "C75",
 	pages          = "92",
 	doi            = "10.1140/epjc/s10052-015-3306-z",
@@ -2872,8 +2841,8 @@
 	Christopher A.",
 	title          = "Signals of {Inert Doublet Dark Matter} in Neutrino
 	Telescopes",
-	journal        = "Phys.~Rev.~D",
-	volume         = "79",
+	journal        = "Phys.~Rev.",
+	volume         = "D79",
 	pages          = "015015",
 	doi            = "10.1103/PhysRevD.79.015015",
 	year           = "2009",
@@ -2933,8 +2902,8 @@
 	author         = "Lundstr{\"o}m, Erik and Gustafsson, Michael and Edsj{\"o},
 	Joakim",
 	title          = "The {Inert Doublet Model} and {LEP II} Limits",
-	journal        = "Phys.~Rev.~D",
-	volume         = "79",
+	journal        = "Phys.~Rev.",
+	volume         = "D79",
 	pages          = "035013",
 	doi            = "10.1103/PhysRevD.79.035013",
 	year           = "2009",
@@ -2947,8 +2916,8 @@
 	author         = "Cao, Qing-Hong and Ma, Ernest and Rajasekaran, G.",
 	title          = "Observing the {Dark Scalar Doublet} and its Impact on the
 	{Standard-Model} {Higgs} Boson at Colliders",
-	journal        = "Phys.~Rev.~D",
-	volume         = "76",
+	journal        = "Phys.~Rev.",
+	volume         = "D76",
 	pages          = "095011",
 	doi            = "10.1103/PhysRevD.76.095011",
 	year           = "2007",
@@ -2962,8 +2931,8 @@
 	author         = "Dolle, Ethan and Miao, Xinyu and Su, Shufang and Thomas,
 	Brooks",
 	title          = "Dilepton Signals in the {Inert Doublet Model}",
-	journal        = "Phys.~Rev.~D",
-	volume         = "81",
+	journal        = "Phys.~Rev.",
+	volume         = "D81",
 	pages          = "035003",
 	doi            = "10.1103/PhysRevD.81.035003",
 	year           = "2010",
@@ -2975,8 +2944,8 @@
 @article{IDMtrileptons,
 	author         = "Miao, Xinyu and Su, Shufang and Thomas, Brooks",
 	title          = "Trilepton Signals in the {Inert Doublet Model}",
-	journal        = "Phys.~Rev.~D",
-	volume         = "82",
+	journal        = "Phys.~Rev.",
+	volume         = "D82",
 	pages          = "035009",
 	doi            = "10.1103/PhysRevD.82.035009",
 	year           = "2010",
@@ -2988,8 +2957,8 @@
 @article{IDMhgaga1,
 	author         = "Arhrib, Abdesslam and Benbrik, Rachid and Gaur, Naveen",
 	title          = "{$H\to \gamma \gamma$} in {Inert Higgs Doublet Model}",
-	journal        = "Phys.~Rev.~D",
-	volume         = "85",
+	journal        = "Phys.~Rev.",
+	volume         = "D85",
 	pages          = "095021",
 	doi            = "10.1103/PhysRevD.85.095021",
 	year           = "2012",
