yet more and more bibliography
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@430 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -623,7 +623,7 @@
 @article{ATLASsamesigntop,
       authors  = "{ATLAS Collaboration}",
       title          = "Analysis of events with {$b$}-jets and two leptons of the same charge or three leptons in {$pp$} collisions at {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
-      journal        = "submitted to Eur.Phys.J.C",
+      journal        = "submitted to Eur.Phys.J.~C",
       volume         = "",
       pages          = "",
       doi            = "",
@@ -1975,7 +1975,7 @@
       primaryClass   = "hep-ex",
       reportNumber   = "CERN-PH-EP-2014-299",
       SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
-      note = "submitted to {Eur.Phys.J.C}"
+      note = "submitted to {Eur.Phys.J.~C}"
 }
 
 
